# withorbit-mnemonic

./: CLAUDE.md  README.md  pyproject.toml
src/withorbit/: __init__.py  cli.py
src/withorbit/core/: markdown_parser.py  models.py  prompt_generator.py
src/withorbit/html/: renderer.py  template.html
src/withorbit/obsidian/: injector.py
tests/: sample.md  test_markdown_parser.py  test_obsidian_injector.py
